Adjust image width and fix ordered list being overlapped by the image

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -166,6 +166,7 @@ a:active {
 /* Lists */
 ul {
   margin: 0 0 10px 20px;
+  overflow: auto;
 }
 
 ul.menu,
