--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -104,6 +104,7 @@ a:active {
 
 ul {
   margin: 0 0 10px 20px;
+  overflow: auto;
 }
 
 ul.menu,
@@ -117,7 +118,6 @@ ul.links {
 ol {
   margin: 0 0 10px 40px;
   overflow: auto;
-
 }
 
 ul ul,
