--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -14,14 +14,18 @@
 		@include breakpoint(992px) {
 			width: calc(66.66666666666666% - 2em);
 		}
-
-		.pane-node-title {
-			text-align: center;
+		> .row:nth-child(2) {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-flow: row wrap;
 		}
 	}
 
-	.pane-node-field-image-testimonial,
-	.pane-node-field-video-testimonial,
+	.pane-node-title {
+		text-align: center;
+	}
+
 	.pane-node-field-audio-testimonial {
 		margin: 1em 0;
 		text-align: center;
